--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -75,6 +75,13 @@
     }
 }
 
+@layer base {
+  button:not([disabled]),
+  [role="button"]:not([disabled]) {
+    cursor: pointer;
+  }
+}
+
 @layer utilities {
     body,
     html {
